# ycmind

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  Dockerfile  config.py  main.py  models.py  neo4j_http.py  pyproject.toml
backend/ingestion/: build_graph.py  build_vectors.py  scrape_yc.py
backend/routers/: graph.py  query.py
backend/services/: graph_retriever.py  hybrid_retriever.py  llm_service.py  vector_retriever.py
frontend/: .env.local.example  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/query/stream/: route.ts
frontend/components/: AnswerPanel.tsx  FollowUps.tsx  ResultsTable.tsx  SearchBar.tsx  Sidebar.tsx  TopNav.tsx
frontend/lib/: api.ts
