[project]
name = "ycmind-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "neo4j==5.20.0",
    "pinecone-client==3.2.2",
    "openai==1.30.1",
    "anthropic==0.28.0",
    "langsmith==0.1.75",
    "httpx==0.27.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.3.0",
    "python-dotenv==1.0.1",
    "tenacity==8.3.0",
    "tqdm==4.66.4",
]

[dependency-groups]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
]
